Block entities
Signed-off-by: cph101 <cph101@icloud.com>